--- a/Application/AspNetWebApp.Web/Properties/launchSettings.json
+++ b/Application/AspNetWebApp.Web/Properties/launchSettings.json
@@ -7,7 +7,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:8443;http://localhost:8080"
+      "applicationUrl": ""
     },
     "IIS Express": {
       "commandName": "IISExpress",
