--- a/Application/AspNetWebApp.Web/Dockerfile
+++ b/Application/AspNetWebApp.Web/Dockerfile
@@ -3,8 +3,10 @@
 
 FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
 WORKDIR /app
+ENV PORT 8080
 EXPOSE 8080
-EXPOSE 8443
+
+ENV ASPNETCORE_URLS "http://*:${PORT}"
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
