--- a/Application/AspNetWebApp.Web/AspNetWebApp.Web.csproj
+++ b/Application/AspNetWebApp.Web/AspNetWebApp.Web.csproj
@@ -6,9 +6,11 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>474df41f-9afc-4e48-a585-c7703a5ed681</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <ApplicationInsightsResourceId>/subscriptions/f5e66d29-1a7f-4ee3-822e-74f644d3e665/resourceGroups/rg-AzureWebAppforContainerApps/providers/microsoft.insights/components/appi-loygobg4zzfba</ApplicationInsightsResourceId>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.15.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
   </ItemGroup>
 
