--- a/.github/workflows/Build and deploy Docker app-v2.yml
+++ b/.github/workflows/Build and deploy Docker app-v2.yml
@@ -271,35 +271,49 @@ jobs:
             --query "value" --output tsv)
           echo "::set-output name=acruserpassword::$result"
 
-    #- name: 'Deploy Container App'
-    #  uses: Azure/CLI@v1
-    #  continue-on-error: false
-    #  with:
-    #    inlineScript: |
-    #      az containerapp create \
-    #        --name ${{ needs.deploy_infrastructure.outputs.output_containerAppName }} \
-    #        --resource-group ${{ env.Azure_Resource_GroupName }} \
-    #        --environment ${{ needs.deploy_infrastructure.outputs.output_containerAppEnvName }} \
-    #        --image ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}.azurecr.io/${{ needs.deploy_infrastructure.outputs.output_containerName }}:${{ github.sha }} \
-    #        --target-port 80 \
-    #        --ingress 'external' \
-    #        --query properties.configuration.ingress.fqdn
+#            --environment ${{ needs.deploy_infrastructure.outputs.output_containerAppEnvName }} \
 
     - name: 'Deploy Container App'
-      uses: Azure/CLI@v1
-      continue-on-error: false
-      with:
-        inlineScript: |
-          az containerapp update \
-             --name ${{ needs.deploy_infrastructure.outputs.output_containerAppName }} \
-             --resource-group ${{ env.Azure_Resource_GroupName }} \
-             --image ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}.azurecr.io/${{ needs.deploy_infrastructure.outputs.output_containerName }}:${{ github.sha }} \
-             --registry-login-server ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}.azurecr.io \
-             --registry-username ${{ steps.GetKVACRValues.outputs.acrusername }} \
-             --registry-password ${{ steps.GetKVACRValues.outputs.acruserpassword }} \
-             --target-port 80 \
-             --ingress 'external' \
-             --query configuration.ingress.fqdn
+     uses: Azure/CLI@v1
+     continue-on-error: false
+     with:
+       inlineScript: |
+         az containerapp create \
+           --name ${{ needs.deploy_infrastructure.outputs.output_containerAppName }} \
+           --resource-group ${{ env.Azure_Resource_GroupName }} \
+           --image ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}.azurecr.io/${{ needs.deploy_infrastructure.outputs.output_containerName }}:${{ github.sha }} \
+           --registry-server ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}.azurecr.io \
+           --registry-username ${{ steps.GetKVACRValues.outputs.acrusername }} \
+           --registry-password ${{ steps.GetKVACRValues.outputs.acruserpassword }} \           
+           --target-port 80 \
+           --ingress 'external' \
+           --query properties.configuration.ingress.fqdn
+
+    # - name: 'Deploy Container App'
+    #   uses: Azure/CLI@v1
+    #   continue-on-error: false
+    #   with:
+    #     inlineScript: |
+    #       az containerapp update \
+    #          --name ${{ needs.deploy_infrastructure.outputs.output_containerAppName }} \
+    #          --resource-group ${{ env.Azure_Resource_GroupName }} \
+    #          --image ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}.azurecr.io/${{ needs.deploy_infrastructure.outputs.output_containerName }}:${{ github.sha }} \
+
+    # - name: 'Deploy Container App'
+    #   uses: Azure/CLI@v1
+    #   continue-on-error: false
+    #   with:
+    #     inlineScript: |
+    #       az containerapp update \
+    #          --name ${{ needs.deploy_infrastructure.outputs.output_containerAppName }} \
+    #          --resource-group ${{ env.Azure_Resource_GroupName }} \
+    #          --image ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}.azurecr.io/${{ needs.deploy_infrastructure.outputs.output_containerName }}:${{ github.sha }} \
+    #          --registry-login-server ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}.azurecr.io \
+    #          --registry-username ${{ steps.GetKVACRValues.outputs.acrusername }} \
+    #          --registry-password ${{ steps.GetKVACRValues.outputs.acruserpassword }} \
+    #          --target-port 80 \
+    #          --ingress 'external' \
+    #          --query configuration.ingress.fqdn
    
     # - name: Build and Deploy Container App
     #   uses: Azure/container-apps-deploy-action@v0
