--- a/.github/workflows/Build and deploy Docker app-v2.yml
+++ b/.github/workflows/Build and deploy Docker app-v2.yml
@@ -105,39 +105,6 @@ jobs:
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-    # - name: Restore
-    #   run: dotnet restore ./Application/aspnet-core-dotnet-core-net6/aspnet-core-dotnet-core-net6.csproj
-
-    # - name: Build
-    #   run: dotnet build ./Application/aspnet-core-dotnet-core-net6/aspnet-core-dotnet-core-net6.csproj --configuration ${{ env.CONFIGURATION }} --no-restore
-
-    # - name: Publish
-    #   run: dotnet publish ./Application/aspnet-core-dotnet-core-net6/aspnet-core-dotnet-core-net6.csproj --configuration ${{ env.CONFIGURATION }} --no-build --output './web'
-
-    # - name: Upload Build Artifacts-Website
-    #   uses: actions/upload-artifact@v3
-    #   with:
-    #     name: Web
-    #     path: ${{ github.workspace }}/web
-
-    # - name: Upload Infrastucture Files
-    #   uses: actions/upload-artifact@v3
-    #   with:
-    #     name: IaC
-    #     path: ${{ github.workspace }}/IaC/*.*
-
-    # - name: Upload Docker File
-    #   uses: actions/upload-artifact@v3
-    #   with:
-    #     name: Web
-    #     path: ${{ github.workspace }}/Application/aspnet-core-dotnet-core-net6/Dockerfile
-
-    # - name: Upload csproj File
-    #   uses: actions/upload-artifact@v3
-    #   with:
-    #     name: Web
-    #     path: ${{ github.workspace }}/Application/aspnet-core-dotnet-core-net6/aspnet-core-dotnet-core-net6.csproj
-
     - name: 'Get Key Vault values'
       id: GetKVACRValues
       uses: Azure/CLI@v1
@@ -156,52 +123,20 @@ jobs:
             --query "value" --output tsv)
           echo "::set-output name=acruserpassword::$result"
 
-    #docker tag ${{ env.IMAGENAME }}:${{ github.sha }} ${{ env.IMAGENAME }}:latest
     - name: Docker Build & Push to ACR
       run: |
         docker login ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}.azurecr.io --username ${{ steps.GetKVACRValues.outputs.acrusername }} --password ${{ steps.GetKVACRValues.outputs.acruserpassword }}
         docker build "$GITHUB_WORKSPACE/${{env.DOCKERFILEPATH}}" -f  "${{env.DOCKERFILEPATH}}/Dockerfile" -t ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}.azurecr.io/${{ needs.deploy_infrastructure.outputs.output_containerName }}:${{ github.sha }}
         docker push ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}.azurecr.io/${{ needs.deploy_infrastructure.outputs.output_containerName }}:${{ github.sha }}
 
-  # docker_build_pushtoacr:
-  #   runs-on: ubuntu-latest
-  #   needs: deploy_infrastructure
-
-  #   name: Docker Build & Push to ACR
-  #   steps:
-  #   - name: Checkout
-  #     uses: actions/checkout@v3
-
-  #   - name: Azure authentication
-  #     uses: azure/login@v1
-  #     with:
-  #       creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-  #   - name: 'Get Key Vault values'
-  #     id: GetKVACRValues
-  #     uses: Azure/CLI@v1
-  #     continue-on-error: true
-  #     with:
-  #       inlineScript: |
-  #         az config set extension.use_dynamic_install=yes_without_prompt
-  #         result=$(az keyvault secret show \
-  #                     --name "acrusername" \
-  #                     --vault-name "${{ needs.deploy_infrastructure.outputs.output_keyvaultName }}" \
-  #                     --query "value" --output tsv)
-  #         echo "::set-output name=acrusername::$result"
-  #         result=$(az keyvault secret show \
-  #           --name "acrpassword" \
-  #           --vault-name "${{ needs.deploy_infrastructure.outputs.output_keyvaultName }}" \
-  #           --query "value" --output tsv)
-  #         echo "::set-output name=acruserpassword::$result"
-
-  #   #docker tag ${{ env.IMAGENAME }}:${{ github.sha }} ${{ env.IMAGENAME }}:latest
-  #   - name: Docker Build & Push to ACR
-  #     run: |
-  #       docker login ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}.azurecr.io --username ${{ steps.GetKVACRValues.outputs.acrusername }} --password ${{ steps.GetKVACRValues.outputs.acruserpassword }}
-  #       docker build "$GITHUB_WORKSPACE/${{env.DOCKERFILEPATH}}" -f  "${{env.DOCKERFILEPATH}}/Dockerfile" -t ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}.azurecr.io/${{ needs.deploy_infrastructure.outputs.output_containerName }}:${{ github.sha }}
-  #       docker push ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}.azurecr.io/${{ needs.deploy_infrastructure.outputs.output_containerName }}:${{ github.sha }}
-
+    - name: Azure CLI script
+      uses: azure/CLI@v1
+      with:
+        inlineScript: |
+          az logout
+          az cache purge
+          az account clear
+            
   deploy_application_to_webapp:
     name: Deploy to Web App
     needs: [docker_build_push, deploy_infrastructure]
@@ -232,6 +167,14 @@ jobs:
         app-name: ${{ needs.deploy_infrastructure.outputs.output_webSiteName }}
         images: ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}.azurecr.io/${{ needs.deploy_infrastructure.outputs.output_containerName }}:${{ github.sha }}
 
+    - name: Azure CLI script
+      uses: azure/CLI@v1
+      with:
+        inlineScript: |
+          az logout
+          az cache purge
+          az account clear
+            
   deploy_application_to_containerapp:
     name: Deploy Container App
     needs: [docker_build_push, deploy_infrastructure]
@@ -276,6 +219,7 @@ jobs:
       continue-on-error: false
       with:
         inlineScript: |
+          az config set extension.use_dynamic_install=yes_without_prompt
           az containerapp create \
             --name ${{ needs.deploy_infrastructure.outputs.output_containerAppName }} \
             --resource-group ${{ env.Azure_Resource_GroupName }} \
@@ -283,67 +227,15 @@ jobs:
             --registry-server ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}.azurecr.io \
             --registry-username ${{ steps.GetKVACRValues.outputs.acrusername }} \
             --registry-password ${{ steps.GetKVACRValues.outputs.acruserpassword }} \
-            --environment ${{ needs.deploy_infrastructure.outputs.output_containerAppEnvName }} \       
+            --environment ${{ needs.deploy_infrastructure.outputs.output_containerAppEnvName }} \
             --target-port 80 \
             --ingress 'external'
+            --env-vars CorsAllowedHosts=*
 
-    # - name: 'Deploy Container App'
-    #   uses: Azure/CLI@v1
-    #   continue-on-error: false
-    #   with:
-    #     inlineScript: |
-    #       az containerapp update \
-    #          --name ${{ needs.deploy_infrastructure.outputs.output_containerAppName }} \
-    #          --resource-group ${{ env.Azure_Resource_GroupName }} \
-    #          --image ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}.azurecr.io/${{ needs.deploy_infrastructure.outputs.output_containerName }}:${{ github.sha }} \
-
-    # - name: 'Deploy Container App'
-    #   uses: Azure/CLI@v1
-    #   continue-on-error: false
-    #   with:
-    #     inlineScript: |
-    #       az containerapp update \
-    #          --name ${{ needs.deploy_infrastructure.outputs.output_containerAppName }} \
-    #          --resource-group ${{ env.Azure_Resource_GroupName }} \
-    #          --image ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}.azurecr.io/${{ needs.deploy_infrastructure.outputs.output_containerName }}:${{ github.sha }} \
-    #          --registry-login-server ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}.azurecr.io \
-    #          --registry-username ${{ steps.GetKVACRValues.outputs.acrusername }} \
-    #          --registry-password ${{ steps.GetKVACRValues.outputs.acruserpassword }} \
-    #          --target-port 80 \
-    #          --ingress 'external' \
-    #          --query configuration.ingress.fqdn
-   
-    # - name: Build and Deploy Container App
-    #   uses: Azure/container-apps-deploy-action@v0
-    #   with:
-    #     #acrName: ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}
-    #     resourceGroup: ${{ env.Azure_Resource_GroupName }}
-    #     #appSourcePath: ${{ github.workspace }} #$GITHUB_WORKSPACE/${{env.DOCKERFILEPATH}} #${{ github.workspace }}
-    #     #dockerfilePath: $GITHUB_WORKSPACE/${{env.DOCKERFILEPATH}}
-    #     #acrName: ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}
-    #     #acrUsername: ${{ steps.GetKVACRValues.outputs.acrusername }}
-    #     #acrPassword: ${{ steps.GetKVACRValues.outputs.acruserpassword }}
-    #     #imageToBuild: ${{ needs.deploy_infrastructure.outputs.output_containerName }}:${{ github.sha }}
-    #     containerAppName: ${{ needs.deploy_infrastructure.outputs.output_containerAppName }}
-    #     imageToDeploy: ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}.azurecr.io/${{ needs.deploy_infrastructure.outputs.output_containerName }}:latest
-    #     #runtimeStack: 'dotnetcore:6.0'
-    #     containerAppEnvironment: ${{ needs.deploy_infrastructure.outputs.output_containerAppEnvName }}
-
-    #            --environment ${{ needs.deploy_infrastructure.outputs.output_containerAppEnvName }} \
-
-    # - name: Deploy Azure Container App Review Revisions
-    #   uses: Azure/aca-review-apps@v0.2.1
-    #   with:
-    #     # Name of the Resource Group in which the Container App will be created
-    #     resource-group: ${{ env.Azure_Resource_GroupName }}
-    #     # Name of the Container App
-    #     name: ${{ needs.deploy_infrastructure.outputs.output_containerAppName }}
-    #     # Name of Container Image. If the `mode` input is `deactivate-revision`, this input is ignored.
-    #     # image: ${{ env.REGISTRYNAME }}.azurecr.io/${{ env.IMAGENAME }}:${{ github.sha }}
-    #     #image: ${{ env.REGISTRYNAME }}.azurecr.io/${{ env.IMAGENAME }}:latest
-    #     image: ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}.azurecr.io/${{ needs.deploy_infrastructure.outputs.output_containerName }}:${{ github.sha }}
-    #     # Suffixes for New Revision or Target Revision of deactivation. If the `mode` input is `deactivate-revision`, this input needs to be set.
-    #     revision-name-suffix: 'staging'
-    #     # Enable Deactivation-Revision Mode of this action. `true` or `false`. Default value is `false`
-    #     #deactivate-revision-mode: # optional
-    
+    - name: Azure CLI script
+      uses: azure/CLI@v1
+      with:
+        inlineScript: |
+          az logout
+          az cache purge
+          az account clear    
