--- a/.github/workflows/Build and deploy Docker app-v2.yml
+++ b/.github/workflows/Build and deploy Docker app-v2.yml
@@ -214,6 +214,11 @@ jobs:
             --query "value" --output tsv)
           echo "::set-output name=acruserpassword::$result"
 
+    - name: DEBUG ONLY Display JV Output Variables
+      run: |
+         echo 'acrusername: ${{ steps.GetKVACRValues.outputs.acrusername }}'
+         echo 'acruserpassword: ${{ steps.GetKVACRValues.outputs.acruserpassword }}'
+
     - name: 'Deploy Container App'
       uses: Azure/CLI@v1
       continue-on-error: false
