--- a/.github/workflows/Build and Deploy Docker apps.yml
+++ b/.github/workflows/Build and Deploy Docker apps.yml
@@ -1,8 +1,8 @@
 name: Build and deploy Docker app to Azure
 on:
-  push:
-    branches:
-      - master
+  #push:
+  #  branches:
+  #    - master
 
   # Allow mannually trigger 
   workflow_dispatch: 
