--- a/.github/workflows/Build and Deploy Container.yml
+++ b/.github/workflows/Build and Deploy Container.yml
@@ -270,9 +270,17 @@ jobs:
         inlineScript: |
           az group lock delete --name DontDeleteMe --resource-group ${{ env.Azure_Resource_GroupName }}
 
+    - name: Build and Deploy to Container App 
+        uses: azure/container-apps-deploy-action@v0 
+        with: 
+          appSourcePath: ${{ github.workspace }}/Application/AspNetWebApp.Web
+          acrName: ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}.azurecr.io 
+          containerAppName: ${{ needs.deploy_infrastructure.outputs.output_containerAppName }}
+          resourceGroup: ${{ env.Azure_Resource_GroupName }}
+
     # Deploy container to Container App
     # --secrets ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}=${{ steps.GetKVACRValues.outputs.acruserpassword }} \
-    - name: 'Deploy to Container App'
+    - name: Deploy to Container App
       uses: Azure/CLI@v1
       continue-on-error: false
       with:
