--- a/.github/workflows/Build and Deploy Container.yml
+++ b/.github/workflows/Build and Deploy Container.yml
@@ -274,7 +274,7 @@ jobs:
       uses: azure/container-apps-deploy-action@v0 
       with: 
         appSourcePath: ${{ github.workspace }}/Application/AspNetWebApp.Web
-        acrName: ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}.azurecr.io 
+        acrName: ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}
         containerAppName: ${{ needs.deploy_infrastructure.outputs.output_containerAppName }}
         resourceGroup: ${{ env.Azure_Resource_GroupName }}
 
