--- a/.github/workflows/Build and Deploy Container.yml
+++ b/.github/workflows/Build and Deploy Container.yml
@@ -60,6 +60,15 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
+    - name: Set short git commit SHA
+      id: vars
+      run: |
+        calculatedSha=$(git rev-parse --short ${{ github.sha }})
+        echo "::set-output name=short_sha::$calculatedSha"
+
+    - name: Confirm git commit SHA output
+      run: echo ${{ steps.vars.outputs.short_sha }}
+
       # Deploy ARM Template using Bicep DSL
     - name: Infrastructure Deploy
       id: Infra
@@ -68,8 +77,7 @@ jobs:
       with:
         resourceGroupName: ${{ env.Azure_Resource_GroupName }}
         template: ./IaC/main-1.bicep
-        #parameters: ./IaC/main-1.params.json
-        deploymentMode: Incremental
+        parameters: ./IaC/main-1.params.json ContainerRevisionSuffix=${{ steps.vars.outputs.short_sha }}
         failOnStdErr: false
 
     # Lock Resource Group
