--- a/.github/workflows/Build and Deploy Container.yml
+++ b/.github/workflows/Build and Deploy Container.yml
@@ -60,14 +60,14 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
-    - name: Set short git commit SHA
-      id: vars
-      run: |
-        calculatedSha=$(git rev-parse --short ${{ github.run_number }})
-        echo "::set-output name=short_sha::$calculatedSha"
+    # - name: Set short git commit SHA
+    #   id: vars
+    #   run: |
+    #     calculatedSha=$(git rev-parse --short ${{ github.run_number }})
+    #     echo "::set-output name=short_sha::$calculatedSha"
 
-    - name: Confirm git commit SHA output
-      run: echo ${{ steps.vars.outputs.short_sha }}
+    # - name: Confirm git commit SHA output
+    #   run: echo ${{ steps.vars.outputs.short_sha }}
 
       # Deploy ARM Template using Bicep DSL
     - name: Infrastructure Deploy
