--- a/.github/workflows/Build and Deploy Container.yml
+++ b/.github/workflows/Build and Deploy Container.yml
@@ -236,7 +236,7 @@ jobs:
     needs: [docker_build_push, deploy_infrastructure]
     environment:
       name: 'Development-ContainerApps'
-      url: '${{ needs.deploy_infrastructure.outputs.output_containerAppFQDN }}'
+      url: ${{ needs.deploy_infrastructure.outputs.output_containerAppFQDN }}
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
