Update Build and Deploy Container.yml

--- a/.github/workflows/Build and Deploy Container.yml
+++ b/.github/workflows/Build and Deploy Container.yml
@@ -11,8 +11,8 @@ env:
   DOCKERFILEPATH: "Application/AspNetWebApp.Web"
   
   dotnet_version: '7.x.x'
-  Azure_Resource_GroupName: 'rg-AzureWebAppforContainerApps'
-  Azure_Resource_GroupLocation: 'eastus2'
+  Azure_Resource_GroupName: 'rg-micrososervices1'
+  Azure_Resource_GroupLocation: 'westus2'
   CONFIGURATION: Release
   WORKING_DIRECTORY: .
   
