--- a/.github/workflows/Build and Deploy Container.yml
+++ b/.github/workflows/Build and Deploy Container.yml
@@ -11,7 +11,7 @@ env:
   DOCKERFILEPATH: "Application/AspNetWebApp.Web"
   
   dotnet_version: '7.x.x'
-  Azure_Resource_GroupName: 'rg-micrososervices1'
+  Azure_Resource_GroupName: 'rg-microservices1'
   Azure_Resource_GroupLocation: 'westus2'
   CONFIGURATION: Release
   WORKING_DIRECTORY: .
