--- a/.github/workflows/Build and Deploy Container.yml
+++ b/.github/workflows/Build and Deploy Container.yml
@@ -12,7 +12,7 @@ env:
   
   dotnet_version: '7.x.x'
   Azure_Resource_GroupName: 'rg-microservices1'
-  Azure_Resource_GroupLocation: 'westus2'
+  Azure_Resource_GroupLocation: 'eastus2'
   CONFIGURATION: Release
   WORKING_DIRECTORY: .
   
